--- a/proyectodecima/src/styles/App.css
+++ b/proyectodecima/src/styles/App.css
@@ -1,10 +1,11 @@
 
 .card{
-display: flex;
-border: solid 2px red;
-margin: 30px;
+display:-webkit-inline-box;
+margin: 15px;
 height: 300px;
-width: 300px;
 
-
+}
+.card-text{
+    
+    font-size: 15px;
 }
